--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -62,14 +62,14 @@
 
 \newcommand\Fontvi{\fontsize{6}{7.2}\selectfont}
 
-\title{Modelling amyloidogenic scaffolds of biofilms}
+\title{Challenges in the computational prediction of peptide amyloidogenicity}
 \date{}
 \author{Micha\l{} Burdukiewicz\inst{1}*, Piotr Sobczyk\inst{2}, Stefan R\"{o}diger\inst{3}, Marlena G\k{a}sior-Głogowska\inst{4}, Pawe\l{} Mackiewicz\inst{1} and Ma\l{}gorzata Kotulska\inst{4}}
-\institute{\textsuperscript{1}University of Wroc\l{}aw, Department of Genomics, \\
-\textsuperscript{2}Wroc\l{}aw University of Science and Technology, Faculty of Pure and Applied Mathematics, \\
-\textsuperscript{3}Brandenburg University of Technology Cottbus-Senftenberg, Institute of Biotechnology, \\
+\institute{\small{\textsuperscript{1}University of Wroc\l{}aw, Department of Genomics \\
+\textsuperscript{2}Wroc\l{}aw University of Science and Technology, Faculty of Pure and Applied Mathematics \\
+\textsuperscript{3}Brandenburg University of Technology Cottbus-Senftenberg, Institute of Biotechnology \\
 \textsuperscript{4}Wroc\l{}aw University of Science and Technology, Department of Biomedical Engineering
-}
+}}
 \IfFileExists{upquote.sty}{\usepackage{upquote}}{}
 \begin{document}
 
